# sparrow

./: Cargo.toml  README.md
src/: audio.rs  engine.rs  main.rs  ui.rs
src/engine/: audio.rs  config.rs  daemon.rs  dmx.rs  led.rs  mod.rs
src/ui/: routes.rs  server.rs
templates/: audio-inputs.html  audio-outputs.html  audio-status-toggle.html  audio-status.html  device-info.html  device-names.html  dmx-outputs.html  gradients-edited.html  gradients.html  home.html  logs.html
