[package]
name = "sparrow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
askama = "0.12.1"
axum = { version = "0.7.9", features = ["query"] }
cpal = "0.15.3"
http = "1.2.0"
serde = { version = "1.0.216", features = ["derive"] }
slog = "2.7.0"
slog-scope = "4.4.0"
slog-term = "2.9.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
