[package]
name = "sparrow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
askama = "0.12.1"
axum = { version = "0.7.9", features = ["query"] }
clap = { version = "4.5.29", features = ["derive"] }
cpal = "0.15.3"
fourier = "0.1.0"
futures = "0.3.31"
http = "1.2.0"
num-complex = "0.2.4"
palette = "0.7.6"
ringbuf = "0.4.7"
serde = { version = "1.0.216", features = ["derive"] }
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-term = "2.9.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "signal", "io-util"] }
tokio-serial = "5.4.5"
